# fastapi-pubsub-threaded

./: .gitignore  README.md  main.py  pyproject.toml
app/: api.py
