[tool.poetry]
name = "fastapi-pubsub-threaded"
version = "0.1.0"
description = ""
authors = ["Mike Allman <mike@allman.io>"]

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.dunnhumby.com/artifactory/api/pypi/pypi-virtual-all/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
google-cloud-pubsub = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
